--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ services:
   angular:
     image: cadugrillo/angular-app1:1.3
     container_name: angular
+    restart: always
     ports:
       - 80:80
 
   golang:
     image: cadugrillo/golang-app1:1.3
     container_name: golang
+    restart: always
     ports:
       - 4300:4300
     environment:
@@ -22,10 +24,17 @@ services:
   mysql:
     image: mysql:latest
     container_name: mysql
+    restart: always
     ports:
       - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=todo
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+volumes:
+  mysql-data:
+  
    
 
