--- a/zzK3s/app1-deployment.yml
+++ b/zzK3s/app1-deployment.yml
@@ -74,6 +74,6 @@ spec:
     app: angular-app1
   ports:
     - protocol: TCP
-      port: 8080
+      port: 80
       targetPort: 80
-  type: LoadBalancer
+#  type: LoadBalancer
