--- a/ui/nginx-custom.conf
+++ b/ui/nginx-custom.conf
@@ -4,12 +4,12 @@ server {
    root /usr/share/nginx/html/;
    index index.html index.htm;
 
-   location / {
+   location /app1 {
 
     try_files $uri $uri/ /index.html =404;
   }
 
-  location /todo {
+  location /app1/todo {
 
     proxy_pass http://golang:4300;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
