--- a/ui/dockerfile
+++ b/ui/dockerfile
@@ -5,10 +5,10 @@ COPY package.json package-lock.json ./
 RUN npm install
 COPY . .
 RUN npm install -g @angular/cli
-RUN ng build --prod --output-path=/dist
+RUN ng build --prod --base-href=/app1/ --output-path=/dist
 
 #stage 2
 FROM nginx:alpine
-COPY --from=node /dist /usr/share/nginx/html
+COPY --from=node /dist /usr/share/nginx/html/app1
 COPY nginx-custom.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
