--- a/ui/nginx-custom.conf
+++ b/ui/nginx-custom.conf
@@ -4,9 +4,11 @@ server {
    root /usr/share/nginx/html/;
    index index.html index.htm;
 
-   location /app1 {
+  location /app1 {
 
+    alias /usr/share/nginx/html/app1;
     try_files $uri $uri/ /index.html =404;
+    
   }
 
   location /app1/todo {
