--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^14.2.2",
     "@popperjs/core": "^2.10.2",
     "aws-amplify": "^4.3.20",
+    "ngx-mqtt": "^9.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
