--- a/zzK3s/app1-deployment.yml
+++ b/zzK3s/app1-deployment.yml
@@ -16,18 +16,26 @@ spec:
     spec:
       containers:
       - name: golang
-        image: cadugrillo/golang-app1:1.4
+        image: cadugrillo/golang-app1:2.0
         env:
         - name: DBDRIVER
           value: "mysql"
         - name: DBIPADDRESS
-          value: "mysql"
+          valueFrom:
+            secretKeyRef:
+              name: aws-rds-pass
+              key: path
+              optional: false
         - name: DBPORT
           value: "3306"
         - name: DBUSER
-          value: "root"
+          value: "admin"
         - name: DBPASSWORD
-          value: "root"
+          valueFrom:
+            secretKeyRef:
+              name: aws-rds-pass
+              key: password
+              optional: false
         ports:
         - containerPort: 4300
 ---
@@ -61,7 +69,7 @@ spec:
     spec:
       containers:
       - name: angular
-        image: cadugrillo/angular-app1:1.3
+        image: cadugrillo/angular-app1:2.0
         ports:
         - containerPort: 4300
 ---
