--- a/ui/angular.json
+++ b/ui/angular.json
@@ -17,6 +17,28 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "uuid",
+              "lodash",
+              "url",
+              "@aws-crypto/sha256-js",
+              "buffer",
+              "ulid",
+              "camelcase-keys",
+              "paho-mqtt",
+              "@aws-crypto/sha256-browser",
+              "fast-xml-parser",
+              "@aws-crypto/crc32",
+              "crypto-js/hmac-sha256",
+              "crypto-js/lib-typedarrays",
+              "isomorphic-unfetch",
+              "js-cookie",
+              "@aws-amplify/ui",
+              "mqtt-browser",
+              "xtend",
+              "cookie",
+              "crypto-js/core"
+           ],
             "outputPath": "dist/ui",
             "index": "src/index.html",
             "main": "src/main.ts",
