--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^14.2.2",
     "@popperjs/core": "^2.10.2",
     "aws-amplify": "^4.3.20",
+    "file-saver": "^2.0.5",
     "ngx-mqtt": "^9.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "^14.2.3",
     "@angular/cli": "^14.2.3",
     "@angular/compiler-cli": "^14.2.2",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
